Adding translations to the website

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -17,6 +17,6 @@ import Social from './Social.astro'
     <span class="size-6">
       <Github />
     </span>
-    <p class="">Sourse code on Github</p>
+    <p class="">Source code on Github</p>
   </a>
 </footer>
