--- a/src/components/Social.astro
+++ b/src/components/Social.astro
@@ -6,7 +6,7 @@ import Mail from './Icons/Mail.astro'
 
 <div class="flex gap-6 [&>a]:size-12">
   <a
-    class="hover:scale-125 transition-transform duration-300"
+    class="social-link hover:scale-125 transition-transform duration-300"
     href="https://www.linkedin.com/in/otrocadev/"
     target="_blank"
     rel="noopener noreferrer"
@@ -14,7 +14,7 @@ import Mail from './Icons/Mail.astro'
     <Linkedin />
   </a>
   <a
-    class="hover:scale-125 transition-transform duration-300"
+    class="social-link hover:scale-125 transition-transform duration-300"
     href="https://github.com/otrocadev"
     target="_blank"
     rel="noopener noreferrer"
@@ -22,7 +22,7 @@ import Mail from './Icons/Mail.astro'
     <Github />
   </a>
   <a
-    class="hover:scale-125 transition-transform duration-300"
+    class="social-link hover:scale-125 transition-transform duration-300"
     href="mailto:contact@otroca.dev"
     target="_blank"
     rel="noopener noreferrer"
