Corrected some typos

--- a/src/components/Index/HeroTitle.astro
+++ b/src/components/Index/HeroTitle.astro
@@ -22,10 +22,7 @@ const { lang } = Astro.props
     </sapan>
   </div>
   <p class="font-bold">
-    [<span class="text-otrocadev-lightblue">
-      {json[lang].jobTitle}
-    </span>
-    ]
+    [<span class="text-otrocadev-lightblue">{json[lang].jobTitle}</span>]
   </p>
   <Social />
 </section>
