Language selector added

--- a/src/components/Index/AboutMe.astro
+++ b/src/components/Index/AboutMe.astro
@@ -1,4 +1,4 @@
-<section class="p-8 sm:p-20 sm:px-20 border-t border-otrocadev-gray">
+<section class="aboutme p-8 sm:p-20 sm:px-20 border-t border-otrocadev-gray">
   <img
     class="float-left sm:w-96 mt-8"
     src="./img/ot-roca-profile.avif"
