--- a/src/components/Index/Experience.astro
+++ b/src/components/Index/Experience.astro
@@ -1,5 +1,5 @@
 <section
-  class="p-8 sm:px-28 sm:pt-24 [&>p]:my-4 border-t border-otrocadev-gray"
+  class="experience p-8 sm:px-28 sm:pt-24 [&>p]:my-4 border-t border-otrocadev-gray"
 >
   <img
     class="float-right w-96"
