hidden new menu when on mobile

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -92,7 +92,7 @@ import LanguageSelector from './LanguageSelector.astro'
       >
     </span>
   </div>
-  <div class="flex items-center gap-2 justify-center">
+  <div class="hidden sm:flex items-center gap-2 justify-center">
     <a
       class="text-nowrap px-4 p-1 border-2 no-underline text-orange-400 border-orange-400 rounded-3xl hover:bg-orange-400 hover:text-otrocadev-light transition-colors duration-300"
       href={json[lang].cvLink}
