--- a/src/components/Index/HeroTitle.astro
+++ b/src/components/Index/HeroTitle.astro
@@ -7,7 +7,9 @@ import json from '../../texts/translations.json'
 const { lang } = Astro.props
 ---
 
-<section class="h-[95dvh] flex flex-col items-center justify-center gap-4">
+<section
+  class="h-[80dvh] flex flex-col items-center justify-center gap-4 overflow-hidden"
+>
   <div class="flex flex-col gap-2">
     <span class="ml-2 text-xl font-bold text-left"
       >{json[lang].introductionText}</span
