Modified some strange behaviours of the window

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -6,7 +6,7 @@ import LanguageSelector from './LanguageSelector.astro'
 ---
 
 <header
-  class="bg-otrocadev-darkblue flex justify-between h-14 text-otrocadev-light border-b border-otrocadev-gray fixed max-w-[1528px] w-full z-20 sm:rounded-t-2xl"
+  class="bg-otrocadev-darkblue flex justify-between h-14 text-otrocadev-light border-4 border-slate-400 fixed z-10 w-full max-w-screen-2xl sm:rounded-t-2xl"
 >
   <div class="flex">
     <span class="flex items-center justify-center p-5 gap-2">
