--- a/src/components/Index/HeroTitle.astro
+++ b/src/components/Index/HeroTitle.astro
@@ -8,7 +8,7 @@ const { lang } = Astro.props
 ---
 
 <section
-  class="h-[80dvh] flex flex-col items-center justify-center gap-4 overflow-hidden"
+  class="h-full min-h-[80dvh] flex flex-col items-center justify-center gap-4"
 >
   <div class="flex flex-col gap-2">
     <span class="ml-2 text-xl font-bold text-left"
